<resources>
    <string name="app_name">OztoticpacAppTuristica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalle_sitio">detalle del sitio</string>
    <string name="imagen_del_sitio">Imagen del sitio</string>
    <string name="informacion_del_sitio">Informacion del Sitio</string>
    <string name="informacion">Informacion</string>
    <string name="historia_del_sitio">Historia del Sitio</string>
    <string name="historia">Historia</string>
    <string name="costos_del_sitio">Costos del Sitio</string>
    <string name="costos">Costos</string>
    <string name="horarios_del_sitio">Horarios del Sitio</string>
    <string name="horarios">Horarios</string>
    <string name="menu_del_restaurante">Menu del Restaurante</string>
    <string name="menu">Menu</string>
    <string name="servicios_del_sitio">Servicios del Sitio</string>
    <string name="servicios">Servicios</string>
    <string name="nombre_del_contacto">Nombre del Contacto</string>
    <string name="contacto">Contacto</string>
    <string name="numero_del_contacto">Numero del Contacto</string>
    <string name="numeros_de_contacto">Numeros de Contacto</string>
    <string name="nombre_del_sitio_turistico">Nombre del Sitio Turistico</string>
    <string name="nombre_del_sitio">Nombre del Sitio</string>
    <string name="icono_por_categoria">Icono por Categoria</string>
    <string name="titulo_del_sitio">Titulo del Sitio</string>
    <string name="sitios_naturales_culturales">Sitios Naturales - Culturales</string>
    <string name="sitios_historicos">Sitios Historicos</string>
    <string name="sitios_gastronomicos">Sitios Gastronomicos</string>
    <string name="sitios_recreativos">Sitios Recreativos</string>
    <string name="hoteles">Hoteles</string>
    <string name="festividades_locales">Festividades Locales</string>
    <string name="historia_de_nogales">Historia de Nogales</string>
    <string name="directorio">Directorio</string>
    <string name="escribe_el_nombre_del_sitio">Escribelo aqui</string>
    <string name="categoria_del_sitio">Categoria del Sitio</string>
    <string name="detalles">Detalles</string>
    <string name="ruta">Ruta</string>
    <string name="cerrar">Cerrar</string>
    <string name="nombre_de_la_app">Oztoticpac</string>
    <string name="nombre_de_la_herramienta">Guia Turistica Movil</string>
    <string name="cerrar_ventana">Cerrar ventana del sitio</string>
    <string name="boton_de_busqueda">Boton de Busqueda de Sitio</string>
    <string name="recuerdas_el_sitio">¿Recuerdas el sitio?</string>
    <string name="imagen_de_la_festividad">Imagen de la festividad</string>
    <string name="imagen_del_pasado_de_nogales">Imagen del pasado de Nogales</string>
    <string name="historia_de_nogales_texto">Historia de Nogales</string>
    <string name="modo_claro_oscuro">Modo claro/oscuro</string>
    <string name="permisos_de_ubicaci_n">Permisos de ubicación</string>
    <string name="descargar_mapas_offline">Descargar mapas offline</string>
    <string name="ajustes">Ajustes</string>
    <string name="sobre_la_app">Sobre la App</string>
    <string name="icono_de_la_configuracion">icono de la configuracion</string>
    <string name="imagen_de_la_app">Imagen de la App</string>
    <string name="estado_actual_no_descargado">Estado actual: No descargado</string>
    <string name="descargar_mapas">Descargar mapas offline</string>
    <string name="actualizar_mapas_offline">Actualizar mapas offline</string>
    <string name="el_mapa_est_descargado">El mapa está descargado</string>
    <string name="el_mapa_est_actualizado">El mapa está actualizado</string>
    <string name="nogales_sitios_turisticos">Nogales - Sitios Turisticos</string>
    <string name="informacion_sobre_la_aplicacion">Informacion sobre la aplicacion</string>
    <string name="limpiar_ruta">Limpiar Ruta</string>
    <string name="borrar_la_ruta">borrar la ruta</string>
</resources>