<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".offlineMaps.ManageMaps"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvMapStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado_actual_no_descargado"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnDownloadMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descargar_mapas"/>

    <Button
        android:id="@+id/btnUpdateMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_mapas_offline"
        android:layout_marginTop="8dp" />

</LinearLayout>